traces/bug_72.txt
src/medit/inout_morice.c:64: error: DEAD_STORE
  The value written to &keyse (type char[2*1](&)) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:64:3: Write of unused value
62.     int     lench;
63.     char    keyseE[]="eE"; 
64.     char    keyse[]="e"; 
        ^
65.     float   res;
66.     
